# sing-sing

./: .env.example  CLAUDE.md  COOKBOOK.md  EDITING.md  LICENSE  README.md  config.py  main.py  pyproject.toml  validate.py
agent/: __init__.py  _base.py  article_agent.py  carousel_agent.py  carousel_mock.py  full_analysis_agent.py  instagram_carousel_adapt_agent.py  instagram_carousel_agent.py  instagram_carousel_enrich_agent.py  instagram_carousel_simplify_agent.py  lenses.py  media_trend_agent.py  newsletter_adapt_agent.py  program_analysis_agent.py  simplify_agent.py
docs/: carousel-agent-spec.md
extractors/: _base.py  instagram_carousel.py  instagram_carousel_long.py  instagram_carousel_short.py  newsletter.py  registry.py
models/: __init__.py  article.py  carousel.py  carousel_steps.py  full_analysis.py  full_analysis_steps.py  instagram_carousel_presentation.py  newsletter_presentation.py  program_analysis.py
renderer/: categories.py  instagram_carousel_renderer.py  instagram_carousel_short_renderer.py  pdf.py  radar.py  render.py  shoot.py
tests/: _newsletter_fixtures.py  test_base_system_param.py  test_carousel_adapt_validate.py  test_carousel_extract_lens.py  test_carousel_lens_model.py  test_categories.py  test_core_elements_model.py  test_cover_layers.py  test_distill_open_questions.py  test_hook_template.py  test_hook_wiring.py  test_lens_templates.py  test_lenses.py  test_newsletter_md_render.py  test_newsletter_model.py  test_newsletter_render.py  test_newsletter_validate.py  test_optimized_lens_wiring.py  test_optimized_number_slide.py  (+12 more)
(+409 files in other folders)
